--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <a href="#contact">Contact</a>
   <a href="about.html">About</a>
 </div>
+    <div class="window">
+    <button class="window_btn" type="button"></button>
     <img src="https://github.com/saimoomedits.png"/>
-    <div>
+    <div style="display: flex; align: center; justify-content: center;">
       <h1 class="text_head">Hey There, I'm Saimoom!</h1>
     </div>
     <p align="center" class="description">
@@ -22,10 +24,12 @@
     My passion is to learn something new and create something usefull.<br>
       I am currently ricing/learning AwesomeWM.
     </p>
-    <div align="left" style="position: relative; margin: 10px;">
+    <div align="center" style="position: relative; margin: 10px;">
       <p>
-      <a href="https://github.com/saimoomedits"><button type="button">Github</button></a>
-     <a href="https://reddit.com"> <button type="button" >Reddit</button></a>
+      <a href="https://github.com/saimoomedits"><button type="button"> </button></a>
+     <a href="https://reddit.com"> <button type="button" >  </button></a>
+    </div>
+    </div>
       </p>
     </div>
   </body>
