--- a/about.html
+++ b/about.html
@@ -8,13 +8,10 @@
   </head>
   <body>
     <h1 align="center" class="head"> About </h1>
-    <p align="center" class="about"
-    I am a self-taughted developer and linux enthusiast.<br> 
-    My passion is to learn something new and create something usefull.<br>
-    I am currently ricing/learning AwesomeWM<br>
-    At the moment I use Arch GNU/Linux.<br>
-    but I am thinking of switching Void soon.<br>
-    I am currently using Awesome as my daily WM.<br>
+    <p align="center" class="about">
+      this is a website i think? <br>
+      and this is the about section?<br>
+      
     <br>
     If you have any tips/issues. please let me know.<br> 
     <h3 align="center" class="about">   cheers! </h3>
